# hiring-rag-server

./: Dockerfile  JD.txt  LICENSE  README.md  chunking_strategy_comparison.md  feedback.db  fly.toml  pyproject.toml  rag_server_architecture.md  rag_server_features_comparison.md  ranking_reranking_guide.md  registry.db  render.yaml  requirements.txt  strategy_b_architecture.md
src/: config.py  main.py
src/routers/: feedback.py  jobs.py  resumes.py
src/services/: db.py  embedding_service.py  feedback_service.py  llm_service.py  ontology_service.py  pinecone_service.py  registry_service.py
src/utils/: chunker.py  experience_extractor.py  parser.py  sectioner.py
tests/: test_api.py  test_bulk_upload.py  test_chunker.py  test_experience_extractor.py  test_feedback.py  test_parser.py  test_pinecone_service.py
